test/mutation_analysis/s0396_rotate_function/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0396_rotate_function/hafis/starchat/mutants/2/Solution.java:22: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
